force-app/main/default/objects/Asset/fields/CalibrationReference__c.field-meta.xml
<CustomField>
    <fullName>CalibrationReference__c</fullName>
    <label>Calibration Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>