force-app/main/default/objects/Asset/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <formula>Product2.Category__r.Category_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Type</label>
    <type>Text</type>
</CustomField>