force-app/main/default/objects/Asset/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>This field is used to store the station domain number.</description>
    <label>Domain</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>