force-app/main/default/objects/Asset/fields/Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Model_Code__c</fullName>
    <formula>Product2.Model_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model_Code</label>
    <type>Text</type>
</CustomField>