force-app/main/default/objects/Asset/fields/MS_Code__c.field-meta.xml
<CustomField>
    <fullName>MS_Code__c</fullName>
    <description>This field is used to store the M S code.</description>
    <label>MS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>