force-app/main/default/objects/Asset/fields/NextCalibrationDate__c.field-meta.xml
<CustomField>
    <fullName>NextCalibrationDate__c</fullName>
    <label>Next Calibration Date</label>
    <type>Date</type>
</CustomField>