force-app/main/default/objects/Asset/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>This field is used to store the Order Date.</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>