force-app/main/default/objects/Asset/fields/Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name__c</fullName>
    <formula>Plant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant Name</label>
    <type>Text</type>
</CustomField>