force-app/main/default/objects/Asset/fields/PlantAccount__c.field-meta.xml
<CustomField>
    <fullName>PlantAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the plant.</description>
    <label>PlantAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (PlantAccount)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>