force-app/main/default/objects/Asset/fields/Product_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Product_Carrier__c</fullName>
    <description>This field is used to store the Product Carrier.</description>
    <label>Product Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>