force-app/main/default/objects/Asset/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>This field is used to store the product name of the station</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>