force-app/main/default/objects/Asset/fields/Ship_To_Party_Customer__c.field-meta.xml
<CustomField>
    <!--Adding to push asset related list on account -->
    <fullName>Ship_To_Party_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Party Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Ship To Party Customer)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>