force-app/main/default/objects/Asset/fields/Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date__c</fullName>
    <label>Shipping Date</label>
    <type>Date</type>
</CustomField>