force-app/main/default/objects/Asset/fields/Software_License_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Software_License_Expiry__c</fullName>
    <label>Software License Expiry</label>
    <type>DateTime</type>
</CustomField>