force-app/main/default/objects/Asset/fields/Station_Number__c.field-meta.xml
<CustomField>
    <fullName>Station_Number__c</fullName>
    <label>Station Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>