force-app/main/default/objects/Asset/fields/Station_Type__c.field-meta.xml
<CustomField>
    <fullName>Station_Type__c</fullName>
    <description>This field is used to store the station type.</description>
    <label>Station Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>