force-app/main/default/objects/Asset/fields/Tag_No__c.field-meta.xml
<CustomField>
    <fullName>Tag_No__c</fullName>
    <description>This field is used to store the tag number, displayed in product-detail page</description>
    <label>Tag No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>