force-app/main/default/objects/Asset/fields/Tokuchu_no__c.field-meta.xml
<CustomField>
    <fullName>Tokuchu_no__c</fullName>
    <label>Tokuchu no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>