force-app/main/default/objects/Asset/fields/Xj_no__c.field-meta.xml
<CustomField>
    <fullName>Xj_no__c</fullName>
    <description>This field is used to store the Xj no.</description>
    <label>Xj no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>